[package]
name = "sasa"
version = "0.1.0"
edition = "2021"

[features]
default = ["cpal"]
cpal = ["dep:cpal"]
oboe = ["dep:oboe"]

[dependencies]
anyhow = "1.0.68"
cpal = { version = "0.16.0", optional = true }
ringbuf = "0.3.3"
symphonia = { version = "0.5.2", features = ["mp3", "aac"] }
thiserror = "2.0.16"

oboe = { version = "0.6.1", optional = true, features = ["shared-stdcxx"] }
atomic_float = "1.1.0"

[dev-dependencies]
kira = "0.7.1"
